# r_cuda_2

./: CMakeLists.txt  kernel_efecto_BLUR.cu  kernel_escala_grises.cu  kernel_producto_externo_vectores.cu  kernel_producto_matrices.cu  main.cpp  main_escala_grises.cpp  main_producto_matrices.cpp  main_repaso2.cpp
